"""
Contains classes to hanlde connection to Interactive Brokers, data retrieval, data sending, error handling, and logging.
"""


class IBHandler:
    """
    Serves as an intermediary between IBApi and app logic. Handles connecting/reconnecting, errors, formatting responses
    """

    def __init__(self) -> None:
        pass
