@startuml classes_marketscout
set namespaceSeparator none
class "<color:red>AnotherSpecificCLIException</color>" as utils.cli.cli_exceptions.AnotherSpecificCLIException {
}
class "BaseModel" as models.starter.BaseModel {
 data
 {abstract}calculate_metrics()
 {abstract}execute_trades()
 {abstract}generate_signals()
}
class "BaseStrategy" as models.strategies.base_strategy.BaseStrategy {
 data
 {abstract}calculate_metrics()
 {abstract}execute_trades()
 {abstract}generate_signals()
}
class "BrokerApiClient" as api.brokerage.client.BrokerApiClient {
 connection_thread
 executor
 making_connection_attempt
 market_memory
 req_id
 watchdog_future
 {abstract}request_historical_data(contract: Contract, end_datetime: str, duration: str, bar_size: str, use_rth: int) -> None
 start_services() -> None
 stop_services() -> None
}
class "Close" as models.strategies.rule.Close {
 {abstract}generate_signals()
}
class "ConnectionWatchdog" as api.ib_utils.ConnectionWatchdog {
 running
 monitor_connection()
 start_dog()
 stop_dog()
}
class "ContractFactory" as models.order.ContractFactory {
 contract_history
 get_contract(ticker: str) -> Contract
}
class "DateTimeType" as utils.references.DateTimeType {
 name
}
class "<color:red>HistoricalDataMissingException</color>" as api.ib_api_exception.HistoricalDataMissingException {
}
class "IBApiClient" as api.ib.IBApiClient {
 current_ticker
 get_req_id
 error(reqId: int, errorCode: int, errorString: str) -> None
 historicalData(reqId: int, bar: BarData)
 historicalDataEnd(reqId: int, start: str, end: str) -> None
 historicalDataUpdate(reqId: int, bar)
 request_historical_data(contract: Contract, end_datetime: str, duration: str, bar_size: str, use_rth: int) -> None
}
class "<color:red>IBApiConnectionException</color>" as api.ib_api_exception.IBApiConnectionException {
}
class "<color:red>IBApiDataRequestException</color>" as api.ib_api_exception.IBApiDataRequestException {
}
class "<color:red>IBApiException</color>" as api.ib_api_exception.IBApiException {
}
class "IBHandler" as handlers.ib_handler.IBHandler {
}
class "IBMarketMemory" as api.ib_utils.IBMarketMemory {
 historical_data
 missing_hist_data
 temp_hist_data
 add_bulk_to_hist_cache(reqId: int) -> None
 add_to_temp_hist_cache(reqId: int, verified_bar: dict) -> None
 verify_bar(bar_data: BarData, bar_size: str) -> dict
 write_to_csv(out_dir: str) -> None
}
class "Indicator" as models.indicator.Indicator {
 data
 {abstract}calculate()
}
class "<color:red>LogFileCreationError</color>" as utils.logging_utils.LogFileCreationError {
 filespec
}
class "LoggingUtils" as utils.logging_utils.LoggingUtils {
 log_application_finish()
 log_application_start()
 update_file_handler_log_level(level)
}
class "MarketMemory" as api.ib_utils.MarketMemory {
 {abstract}verify_bar(bar_data) -> dict
}
class "Momentum" as models.indicator.Momentum {
 {abstract}calculate()
}
class "MovingAverage" as models.indicator.MovingAverage {
 calculate()
}
class "MovingAverageCrossover" as models.strategies.rule.MovingAverageCrossover {
 long_window
 short_window
 generate_signals()
}
class "Open" as models.strategies.rule.Open {
 indicator
 {abstract}generate_signals()
}
class "PairsTradingStrategy" as models.strategies.pairs_trading.PairsTradingStrategy {
 entry_threshold : float
 exit_threshold : float
 spread
 symbol1
 symbol2
 {abstract}calculate_metrics()
 calculate_spread()
 {abstract}execute_trades()
 generate_signals()
}
class "PositionSize" as models.strategies.rule.PositionSize {
 {abstract}calculate_position_size()
}
class "PriceBar" as utils.references.PriceBar {
 close : float
 date : str
 high : float
 low : float
 open : float
 volume : int
}
class "<color:red>SomeGeneralCLIException</color>" as utils.cli.cli_exceptions.SomeGeneralCLIException {
}
class "<color:red>SomeMoreSpecificCLIException</color>" as utils.cli.cli_exceptions.SomeMoreSpecificCLIException {
}
class "Starter" as models.starter.Starter {
 actual_sharpe_ratio
 actual_speed
 expected_sharpe_ratio
 signals : NoneType, ndarray
 {abstract}calculate_metrics()
 {abstract}execute_trades()
 generate_signals()
}
class "Tickers" as utils.references.Tickers {
 apple : str
 microsoft : str
 tesla : str
}
class "TradingRule" as models.strategies.rule.TradingRule {
 data
}
class "<color:red>UnsupportedBarSizeException</color>" as api.ib_api_exception.UnsupportedBarSizeException {
}
api.ib.IBApiClient --|> api.brokerage.client.BrokerApiClient
api.ib_api_exception.HistoricalDataMissingException --|> api.ib_api_exception.IBApiDataRequestException
api.ib_api_exception.IBApiConnectionException --|> api.ib_api_exception.IBApiException
api.ib_api_exception.IBApiDataRequestException --|> api.ib_api_exception.IBApiException
api.ib_api_exception.UnsupportedBarSizeException --|> api.ib_api_exception.IBApiDataRequestException
api.ib_utils.IBMarketMemory --|> api.ib_utils.MarketMemory
models.indicator.Momentum --|> models.indicator.Indicator
models.indicator.MovingAverage --|> models.indicator.Momentum
models.starter.Starter --|> models.starter.BaseModel
models.strategies.pairs_trading.PairsTradingStrategy --|> models.strategies.base_strategy.BaseStrategy
models.strategies.rule.Close --|> models.strategies.rule.TradingRule
models.strategies.rule.MovingAverageCrossover --|> models.strategies.rule.Open
models.strategies.rule.Open --|> models.strategies.rule.TradingRule
models.strategies.rule.PositionSize --|> models.strategies.rule.TradingRule
utils.cli.cli_exceptions.AnotherSpecificCLIException --|> utils.cli.cli_exceptions.SomeGeneralCLIException
utils.cli.cli_exceptions.SomeMoreSpecificCLIException --|> utils.cli.cli_exceptions.SomeGeneralCLIException
api.ib_utils.ConnectionWatchdog --* api.brokerage.client.BrokerApiClient : _watchdog
api.ib_utils.MarketMemory --o api.brokerage.client.BrokerApiClient : _market_memory
models.indicator.Indicator --o models.strategies.rule.Open : indicator
@enduml
